@@ -15,6 +15,7 @@ Arguments bounds (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
 Result scale: 1
 Arguments scale: 1, 1, 1, 1
 Starting point: [4](1,5,5,1)
+Infinity value: inf
 A solution has been found: 
 [4](1,4.743,3.82115,1.37941)
 f(*x) = 14.5723
